--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 <h3 class="font-weight-light">Personal Info</h3>
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
-                    <li><span>Birthdate</span> : 09/13/1996</li>
-                    <li><span>Email</span> : meghana.kolathuru@gmail.com</li>
-                    <li><span>Phone</span> : + (123) 456-7890</li>
+                    <li><span>Birthdate</span> : 08/30/1990</li>
+                    <li><span>Email</span> : meghana1.kolathuru@gmail.com</li>
+                    <li><span>Phone</span> : +1 (916) 903-4272</li>
                     <li><span>Skype</span> : meghanakolathuru </li>
-                    <li><span>Address</span> :  Columbia SC US.</li>
+                    <li><span>Address</span> :  Lexington SC US.</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
