--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                         <p><b>Topics: Quality Assurance, Automation Testing, Data Analysis & Programming.</b></p>
                      <!--   <p> voluptatibus dolores quae obcaecati.</p> -->
 
-                        <a href="https://knowledgeiswealthbooks.blogspot.com/" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://knowledgeiswealthbooks.blogspot.com/" target="_blank" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -697,7 +697,7 @@
 			    
 			    <p><b>Grades Available: Kindergarten, First Grade.</b></p>
 
-                        <a href="https://weperfectpractice.blogspot.com/" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://weperfectpractice.blogspot.com/" target="_blank" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
@@ -718,7 +718,7 @@
 			    
 			     <p><b>Cuisines: South Indian (Andhra style, Tamil Nadu style), Continental.</b></p>
 
-                        <a href="http://moniandfood.blogspot.com/" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="http://moniandfood.blogspot.com/" target="_blank" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
