--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                             <a href="#"><i class="ti-comment"></i> 0</a>
                         </p>
                         
-                        <p>Eco-friendly and fun filled way to engage your kids to perform the grade based activities for free!</p>
+                        <p>Here is a eco-friendly and fun filled way to engage your kids to perform the grade based activities for free! This helped my kids to learn things on their gadgets and these activities can be done repeatedly to enable them make progress.</p>
 			    
 			    <p><b>Grades Available: Kindergarten, First Grade.</b></p>
 
