--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <li><span>Address</span> :  Columbia, SC, US.</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" href="https://www.facebook.com/meghana.kolathur"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-					<li class="social-item"><a class="social-link" href="https://www.instagram.com/meghanakolathur/"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://www.facebook.com/meghana.kolathur" target="_blank"><i class="ti-facebook" aria-hidden="true"></i></a></li>
+					<li class="social-item"><a class="social-link" href="https://www.instagram.com/meghanakolathur/" target="_blank"><i class="ti-instagram" aria-hidden="true"></i></a></li>
                    <!--   <li class="social-item"><a class="social-link" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
                     
