--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Meghana Kolathuru</h5>
-                        <div class="brand-subtitle">Aspiring Data Analyst</div>
+                        <div class="brand-subtitle">Aspiring IT Analyst</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -139,22 +139,22 @@
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
-                                <h4>Expertise</h4>
+                                <h4>Interests</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">Data Analysis</h6>
                             <P>Tableau</P>
-                            <P class="subtitle">Some of the Tableau projects/assignments that I have worked on are available <a href="https://public.tableau.com/app/profile/meghana1675" target="_blank">here</a>.</P>
+                            <P class="subtitle">Fascinated by the concepts of Data Science, learnt the basics. Some of the Tableau projects/assignments that I have worked on are available <a href="https://public.tableau.com/app/profile/meghana1675" target="_blank">here</a>.</P>
                             <hr>
                             <h6 class="title text-danger">Process</h6>
                             <P>Automation Testing</P>
-                            <P class="subtitle">Some of the Selenium projects that I have worked on are available here.</P>
+                            <P class="subtitle">Learnt the concepts of Manual Testing and Automation Testing (Selenium). Created few sample projects to get hands-on experience as well.</P>
                             <hr>
                             <h6 class="title text-danger">Programming</h6>
                             <P>Core Java</P>
-                            <P class="subtitle">Some of the Core Java projects that I have worked on are available here.</P>
+                            <P class="subtitle">After understanding the importance of programming language support for Automation Testing process, started learning Core Java concepts. Familiar with Collections, Exception Handling, File Handling, etc.,</P>
                         </div>
                     </div>
                 </div>
