--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3">Aspiring Data Analyst</h5>
-                <p class="mt-20">With the intent to learn and make a place for my self in the IT Industry, I started learning new technologies. I was quickly fascinated by the concepts of Data Science and its potential. I wish to see myself progress in this field as the field expands. </p>
+                <h5 class="mb-3">Aspiring IT Analyst</h5>
+                <p class="mt-20">With the intent to learn and make a place for my self in the IT Industry, I started learning new technologies. I was quickly fascinated by the concepts of Data Science, Automation Testing and their potential. I wish to see myself progress in these areas as the field expands.</p>
                 <!-- <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>  -->
             </div>
             <div class="col-lg-4 about-card">
@@ -100,7 +100,7 @@
                 </ul>  
             </div>
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light">My Expertise</h3>
+                <h3 class="font-weight-light">My Interests</h3>
                 <span class="line mb-5"></span>
 				<div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
