--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li> -->
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
+                    <img src="assets/imgs/avatar.png" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Meghana Kolathuru</h5>
                         <div class="brand-subtitle">Aspiring IT Analyst</div>
